--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-1.4,pep8
+envlist = py27-1.4,pep8,pylint
 
 [testenv]
 setenv =
@@ -16,5 +16,13 @@ deps =
 deps = pep8
 commands =
    pep8 --statistics --show-source --exclude=.venv,venv,.tox,*egg .
+
+[testenv:pylint]
+deps =
+    pylint
+    -r{toxinidir}/requirements.txt
+commands =
+    pylint --rcfile=.pylintrc setup.py tastypie_user
+
 
 
